--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-spring.application.name=Auth Service
+spring.application.name = Auth Service
+
+server.port = 8080
+
+spring.datasource.url = jdbc:postgresql://localhost:5432/grapher_auth_db
+spring.datasource.username = postgres
+spring.datasource.password = password
+
+spring.jpa.hibernate.ddl-auto = none
+spring.jpa.open-in-view = false
+
+grapher-auth.privateKeyPath = src/main/resources/private_key.der
+grapher-auth.publicKeyPath = src/main/resources/public_key.der
+grapher-auth.tokenDuration = 3600000
+ 
