Big push. Progress on all fronts. Couldn't get the interceptor to work so it has been replaced. Will work on setting-up some initial unit tests.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name = Auth Service
 
 server.port = 8080
+server.http2.enabled = true
 
 spring.datasource.url = jdbc:postgresql://localhost:5432/grapher_auth_db
 spring.datasource.username = postgres
@@ -12,4 +13,9 @@ spring.jpa.open-in-view = false
 grapher-auth.privateKeyPath = src/main/resources/private_key.der
 grapher-auth.publicKeyPath = src/main/resources/public_key.der
 grapher-auth.tokenDuration = 3600000
+grapher-auth.bcryptEffort = 12
+
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
  
