--- a/src/test/resources/application_test.properties
+++ b/src/test/resources/application_test.properties
@@ -3,7 +3,7 @@ spring.application.name = Auth Service
 server.port = 8080
 server.http2.enabled = true
 
-spring.datasource.url = jdbc:postgresql://localhost:5432/grapher_auth_db?currentSchema=public
+spring.datasource.url = jdbc:postgresql://localhost:5432/grapher_auth_db?currentSchema=testing
 spring.datasource.username = postgres
 spring.datasource.password = password
 
@@ -14,7 +14,3 @@ grapher-auth.privateKeyPath = src/main/resources/private_key.der
 grapher-auth.publicKeyPath = src/main/resources/public_key.der
 grapher-auth.tokenDuration = 3600000
 grapher-auth.bcryptEffort = 12
-
-
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
