Refactors. Changed auth from jwt to sessions.

--- a/src/test/resources/application_test.properties
+++ b/src/test/resources/application_test.properties
@@ -1,16 +1,44 @@
+##
+grapher-auth.maxSessionsPerUser = 2
+grapher-auth.sessionDuration = 3600000
+grapher-auth.bcryptEffort = 12
+
+##.
+server.compression.enabled = true
+server.compression.min-response-size = 4096
+server.http2.enabled = true
+server.max-http-request-header-size = 1024
+server.port = 8080
+server.shutdown = graceful
+
+##.
 spring.application.name = Auth Service
 
-server.port = 8080
-server.http2.enabled = true
-
+##..
+spring.datasource.hikari.maximum-pool-size = 16
+spring.datasource.password = password
 spring.datasource.url = jdbc:postgresql://localhost:5432/grapher_auth_db?currentSchema=testing
 spring.datasource.username = postgres
-spring.datasource.password = password
 
+##..
 spring.jpa.hibernate.ddl-auto = none
 spring.jpa.open-in-view = false
+#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.batch_size = 32
+spring.jpa.properties.hibernate.order_inserts = true
+spring.jpa.properties.hibernate.order_updates = true
+#spring.jpa.show-sql=true
 
-grapher-auth.privateKeyPath = src/main/resources/private_key.der
-grapher-auth.publicKeyPath = src/main/resources/public_key.der
-grapher-auth.tokenDuration = 3600000
-grapher-auth.bcryptEffort = 12
+##..
+spring.main.lazy-initialization = true
+
+##..
+spring.rabbitmq.host = localhost
+spring.rabbitmq.password = password
+spring.rabbitmq.port = 5672
+spring.rabbitmq.username = rabbitmq
+
+##..
+spring.threads.virtual.enabled = true
+
+##
