Giant refactor:     - moved away from JWTs, weird to handle logouts & role changes. Implemented sessions instead.     - Developed the rest of the microservice. TODO: Tests are missing and must be redone.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@
 grapher-auth.maxSessionsPerUser = 2
 grapher-auth.sessionDuration = 3600000
 grapher-auth.bcryptEffort = 12
+# login failures before timer
+# userLockTime
+# logsPath
 
 ##.
 server.compression.enabled = true
@@ -23,11 +26,9 @@ spring.datasource.username = postgres
 ##..
 spring.jpa.hibernate.ddl-auto = none
 spring.jpa.open-in-view = false
-#spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.batch_size = 32
 spring.jpa.properties.hibernate.order_inserts = true
 spring.jpa.properties.hibernate.order_updates = true
-#spring.jpa.show-sql=true
 
 ##..
 spring.main.lazy-initialization = true
@@ -42,4 +43,3 @@ spring.rabbitmq.username = rabbitmq
 spring.threads.virtual.enabled = true
 
 ##
-#logging.level.org.springframework.boot.autoconfigure=DEBUG
