Bug fixes. Some first basic tests.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 grapher-auth.maxSessionsPerUser = 2
 grapher-auth.sessionDuration = 3600000
 grapher-auth.bcryptEffort = 12
-# login failures before timer
-# userLockTime
-# logsPath
+grapher-auth.loginFailures = 5
+grapher-auth.userLockTime = 60000
+grapher-auth.logsPath = ./logs
 
 ##.
 server.compression.enabled = true
@@ -20,7 +20,7 @@ spring.application.name = Auth Service
 ##..
 spring.datasource.hikari.maximum-pool-size = 16
 spring.datasource.password = password
-spring.datasource.url = jdbc:postgresql://localhost:5432/grapher_auth_db?currentSchema=public
+spring.datasource.url = jdbc:postgresql://localhost:5432/postgres?currentSchema=public
 spring.datasource.username = postgres
 
 ##..
