--- a/src/test/resources/application_test.properties
+++ b/src/test/resources/application_test.properties
@@ -2,6 +2,9 @@
 grapher-auth.maxSessionsPerUser = 2
 grapher-auth.sessionDuration = 3600000
 grapher-auth.bcryptEffort = 12
+grapher-auth.loginFailures = 5
+grapher-auth.userLockTime = 60000
+grapher-auth.logsPath = ./logs
 
 ##.
 server.compression.enabled = true
@@ -17,7 +20,7 @@ spring.application.name = Auth Service
 ##..
 spring.datasource.hikari.maximum-pool-size = 16
 spring.datasource.password = password
-spring.datasource.url = jdbc:postgresql://localhost:5432/grapher_auth_db?currentSchema=testing
+spring.datasource.url = jdbc:postgresql://localhost:5432/postgres?currentSchema=testing
 spring.datasource.username = postgres
 
 ##..
