--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,8 @@ server.http2.enabled = true
 server.max-http-request-header-size = 1024
 server.port = 8080
 server.shutdown = graceful
+server.tomcat.accept-count = 100
+server.tomcat.max-connections = 8192
 
 ##.
 spring.application.name = Auth Service
