--- a/pom.xml
+++ b/pom.xml
@@ -82,14 +82,19 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 
 				<configuration>
-					<excludes>
 
+					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
 						</exclude>
-
 					</excludes>
+
+					<jvmArguments>
+						-Xms67108864
+						-Xmx8589934592
+					</jvmArguments>
+
 				</configuration>
 
 			</plugin>
