--- a/src/test/resources/application_test.properties
+++ b/src/test/resources/application_test.properties
@@ -1,10 +1,12 @@
 ##
-grapher-auth.maxSessionsPerUser = 2
-grapher-auth.sessionDuration = 3600000
 grapher-auth.bcryptEffort = 12
+grapher-auth.forgotPasswordDuration = 300000
 grapher-auth.loginFailures = 5
-grapher-auth.userLockTime = 60000
 grapher-auth.logsPath = ./logs
+grapher-auth.maxSessionsPerUser = 2
+grapher-auth.maxTotalLoggedUsers = 100000
+grapher-auth.sessionDuration = 3600000
+grapher-auth.userLockTime = 60000
 
 ##.
 server.compression.enabled = true
