--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,10 @@
 grapher-auth.bcryptEffort = 12
 grapher-auth.forgotPasswordDuration = 300000
 grapher-auth.loginFailures = 5
+
+# must be the same as the path in logback.xml
 grapher-auth.logsPath = ./logs
+
 grapher-auth.maxSessionsPerUser = 2
 grapher-auth.maxTotalLoggedUsers = 100000
 grapher-auth.sessionDuration = 3600000
@@ -11,12 +14,18 @@ grapher-auth.userLockTime = 60000
 ##.
 server.compression.enabled = true
 server.compression.min-response-size = 4096
+server.connection-timeout = 10000
+server.error.whitelabel.enabled = false
+server.forward-headers-strategy = framework
 server.http2.enabled = true
-server.max-http-request-header-size = 1024
+server.max-http-request-header-size = 512
 server.port = 8080
 server.shutdown = graceful
-server.tomcat.accept-count = 100
+server.tomcat.accept-count = 200
 server.tomcat.max-connections = 8192
+server.tomcat.max-keep-alive-requests = 200
+server.tomcat.max-swallow-size = 524288
+server.tomcat.processor-cache = 200
 
 ##.
 spring.application.name = Auth Service
@@ -27,15 +36,19 @@ spring.datasource.password = password
 spring.datasource.url = jdbc:postgresql://localhost:5432/postgres?currentSchema=public
 spring.datasource.username = postgres
 
+spring.datasource.hikari.connection-timeout = 15000
+spring.datasource.hikari.max-lifetime = 900000
+
 ##..
 spring.jpa.hibernate.ddl-auto = none
 spring.jpa.open-in-view = false
-spring.jpa.properties.hibernate.jdbc.batch_size = 32
+spring.jpa.properties.hibernate.jdbc.batch_size = 64
 spring.jpa.properties.hibernate.order_inserts = true
 spring.jpa.properties.hibernate.order_updates = true
 
 ##..
 spring.main.lazy-initialization = true
+spring.mvc.problemdetails.enabled = true
 
 ##..
 spring.rabbitmq.host = localhost
