--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ grapher-auth.logsPath = ./logs
 grapher-auth.maxSessionsPerUser = 2
 grapher-auth.maxTotalLoggedUsers = 100000
 grapher-auth.sessionDuration = 3600000
+grapher-auth.sessionExpirationMargin = 5000
 grapher-auth.userLockTime = 60000
 
 ##.
@@ -18,7 +19,7 @@ server.connection-timeout = 10000
 server.error.whitelabel.enabled = false
 server.forward-headers-strategy = framework
 server.http2.enabled = true
-server.max-http-request-header-size = 512
+server.max-http-request-header-size = 1024
 server.port = 8080
 server.shutdown = graceful
 server.tomcat.accept-count = 200
@@ -38,6 +39,9 @@ spring.datasource.username = postgres
 
 spring.datasource.hikari.connection-timeout = 15000
 spring.datasource.hikari.max-lifetime = 900000
+
+##..
+spring.jmx.enabled = false
 
 ##..
 spring.jpa.hibernate.ddl-auto = none
