--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,8 +34,8 @@ spring.application.name = Auth Service
 ##..
 spring.datasource.hikari.maximum-pool-size = 16
 spring.datasource.password = password
-spring.datasource.url = jdbc:postgresql://localhost:5432/postgres?currentSchema=public
-spring.datasource.username = postgres
+spring.datasource.url = jdbc:mariadb://localhost:3306/grapher_auth
+spring.datasource.username = root
 
 spring.datasource.hikari.connection-timeout = 15000
 spring.datasource.hikari.max-lifetime = 900000
