--- a/src/test/resources/application_test.properties
+++ b/src/test/resources/application_test.properties
@@ -2,19 +2,31 @@
 grapher-auth.bcryptEffort = 12
 grapher-auth.forgotPasswordDuration = 300000
 grapher-auth.loginFailures = 5
+
+# must be the same as the path in logback.xml
 grapher-auth.logsPath = ./logs
+
 grapher-auth.maxSessionsPerUser = 2
 grapher-auth.maxTotalLoggedUsers = 100000
 grapher-auth.sessionDuration = 3600000
+grapher-auth.sessionExpirationMargin = 5000
 grapher-auth.userLockTime = 60000
 
 ##.
 server.compression.enabled = true
 server.compression.min-response-size = 4096
+server.connection-timeout = 10000
+server.error.whitelabel.enabled = false
+server.forward-headers-strategy = framework
 server.http2.enabled = true
 server.max-http-request-header-size = 1024
 server.port = 8080
 server.shutdown = graceful
+server.tomcat.accept-count = 200
+server.tomcat.max-connections = 8192
+server.tomcat.max-keep-alive-requests = 200
+server.tomcat.max-swallow-size = 524288
+server.tomcat.processor-cache = 200
 
 ##.
 spring.application.name = Auth Service
@@ -22,18 +34,25 @@ spring.application.name = Auth Service
 ##..
 spring.datasource.hikari.maximum-pool-size = 16
 spring.datasource.password = password
-spring.datasource.url = jdbc:postgresql://localhost:5432/postgres?currentSchema=testing
-spring.datasource.username = postgres
+spring.datasource.url = jdbc:mariadb://localhost:3306/grapher_auth_test
+spring.datasource.username = root
+
+spring.datasource.hikari.connection-timeout = 15000
+spring.datasource.hikari.max-lifetime = 900000
+
+##..
+spring.jmx.enabled = false
 
 ##..
 spring.jpa.hibernate.ddl-auto = none
 spring.jpa.open-in-view = false
-spring.jpa.properties.hibernate.jdbc.batch_size = 32
+spring.jpa.properties.hibernate.jdbc.batch_size = 64
 spring.jpa.properties.hibernate.order_inserts = true
 spring.jpa.properties.hibernate.order_updates = true
 
 ##..
 spring.main.lazy-initialization = true
+spring.mvc.problemdetails.enabled = true
 
 ##..
 spring.rabbitmq.host = localhost
